--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Ionic App</title>
 
-<head>
-  <meta charset="utf-8" />
-  <title>Ionic App</title>
+    <base href="/" />
 
-  <base href="/" />
+    <meta
+      name="viewport"
+      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
 
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="msapplication-tap-highlight" content="no" />
+    <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+    <!-- add to homescreen for ios -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  </head>
 
-  <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-</head>
-
-<body>
-  <app-root></app-root>
-</body>
-
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
+
+<script src="https://apis.google.com/js/api.js"></script>
+<script>
+  // function start() {
+  //   // 2. Initialize the JavaScript client library.
+  //   gapi.client
+  //     .init({
+  //       apiKey: '***REMOVED***',
+  //       clientId:
+  //         '***REMOVED***',
+  //       discoveryDocs: [
+  //         'https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"'
+  //       ],
+  //       scope: 'https://www.googleapis.com/auth/drive.metadata.readonly'
+  //     })
+  //     .then(function() {
+  //       gapi.auth2.getAuthInstance().isSignedIn.listen(updateSigninStatus);
+  //     });
+  // }
+  // // 1. Load the JavaScript client library.
+  // gapi.load('client', start);
+</script>
