add material-icons to node modules

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,19 @@
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+    <!-- <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,800,900"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    /> -->
+    <link
+      href="../node_modules/material-design-icons/iconfont/material-icons.css"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
