--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
       href="../node_modules/material-design-icons/iconfont/material-icons.css"
       rel="stylesheet"
     /> -->
+
+    <link href="assets/fonts/stylesheet.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
