--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-    <link href="assets/fonts/stylesheet.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="assets/fonts/stylesheet.css" rel="stylesheet" type="text/css" /> -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:100,300,400,500,700,900"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
