--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
-    <link rel="icon" type="image/png" href="assets/icon/clip-favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="assets/icon/clip.svg" />
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
