add monospace font

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,13 @@
       href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:100,300,400,500,700,900"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Mono"
+      rel="stylesheet"
+    />
 
     <link
-      href="https://cdn.quilljs.com/1.0.0/quill.snow.css"
+      href="https://cdn.quilljs.com/1.0.0/quill.bubble.css"
       rel="stylesheet"
     />
   </head>
