--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>clips</title>
+    <title>Clips</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
@@ -14,7 +14,7 @@
   <body>
     <noscript>
       <strong
-        >We're sorry but clips doesn't work properly without JavaScript enabled.
+        >We're sorry but Clips doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong
       >
     </noscript>
